echarts和axios的全局挂载

--- a/vision/public/index.html
+++ b/vision/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- 使用srcipt标签引入echarts，相当于是全局引入，将echarts挂载到window上，window.echarts -->
+    <script src="static/lib/echarts.min.js"></script>
   </body>
 </html>
