--- a/vision/public/index.html
+++ b/vision/public/index.html
@@ -15,5 +15,7 @@
     <!-- built files will be auto injected -->
     <!-- 使用srcipt标签引入echarts，相当于是全局引入，将echarts挂载到window上，window.echarts -->
     <script src="static/lib/echarts.min.js"></script>
+    <!-- 引入皮肤文件 -->
+    <script src="./static/theme/chalk.js"></script>
   </body>
 </html>
